vidspri-front-public-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vifdspri-website-service
  labels:
    app.kubernetes.io/name: vifdspri-website
spec:
  selector:
    app.kubernetes.io/name: vifdspri-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: next-server
