vidspri-front-public-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vifdspri-website-ingress
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: "vifdspri-certificate"

spec:
  tls:
  - hosts:
    - adrien-sy.dev
  defaultBackend:
    service:
      name: vifdspri-website-service
      port:
        number: 80
  rules:
  - host: adrien-sy.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vifdspri-website-service
            port:
              number: 80
